--- a/04 Intro CSS/textosconhtml.html
+++ b/04 Intro CSS/textosconhtml.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Textos con HTML</title>
-   <link rel="stylesheet" href="textos.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap');      /*importar desde google*/   
+      </style>  
+    
+    <link rel="stylesheet" href="textos.css">
+   
 </head>
 <body>
     <p>Trabajando con textos</p>
