--- a/06-Selectores/html/pseudoelementos.html
+++ b/06-Selectores/html/pseudoelementos.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pseudoelementos</title>
-    <link rel="stylesheet" href="../css/pseudoelementos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/pseudoelementos.css" />
+  </head>
+  <body>
     <div class="contenedor">
-        <p><span class="frase">Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin tratar de abrirlos jamás.</span> René Descartes </p>
+      <p>
+        <span class="frase"
+          >Vivir sin filosofar es, propiamente, tener los ojos cerrados, sin
+          tratar de abrirlos jamás.</span
+        >
+        René Descartes
+      </p>
     </div>
     <div class="libro">
-        <p>
-            Erase una vez un barquito
-            Laboris dolore nisi ut esse deserunt in minim et dolore magna occaecat adipisicing 
-            tempor. Labore ullamco magna dolor laboris laboris nostrud. Anim sunt deserunt 
-            velit nisi id aliqua labore pariatur fugiat aliqua. Nisi ut occaecat deserunt 
-            duis irure duis eiusmod ut labore labore mollit ea dolore irure.
-        </p>
+      <p>
+        Erase una vez un barquito Laboris dolore nisi ut esse deserunt in minim
+        et dolore magna occaecat adipisicing tempor. Labore ullamco magna dolor
+        laboris laboris nostrud. Anim sunt deserunt velit nisi id aliqua labore
+        pariatur fugiat aliqua. Nisi ut occaecat deserunt duis irure duis
+        eiusmod ut labore labore mollit ea dolore irure.
+      </p>
     </div>
     <div class="listado">
-        <ul>
-            <li>Elemento 1</li>
-            <li>Elemento 2</li>
-            <li>Elemento 3</li>
-        </ul>
-        <ol>
-            <li>Elemento 1</li>
-            <li>Elemento 2</li>
-            <li>Elemento 3</li>  
-        </ol>
+      <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+      </ul>
+      <ol>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+      </ol>
     </div>
-</body>
+  </body>
 </html>
