--- a/04 Intro CSS/introestilos.html
+++ b/04 Intro CSS/introestilos.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intro Estilos</title>
-    <link rel="stylesheet" href="introestilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="introestilos.css" />
+  </head>
+  <body>
     <h3 class="colores">Colores</h3>
-    
-</body>
-<h3 class="colores">Colores</h3>
-<p class="color-hexadecimal">Color hexadecimal</p>
-<p class="color-rgb">Color rgb</p>
-<p class="color-rgba">Color rgba</p>
-<div class="fondo">
+  </body>
+  <h3 class="colores">Colores</h3>
+  <p class="color-hexadecimal">Color hexadecimal</p>
+  <p class="color-rgb">Color rgb</p>
+  <p class="color-rgba">Color rgba</p>
+  <div class="fondo">
     <p>Hola</p>
-    <h1>Esto es un h1 dentro de un div</h1>    
-</div>
-<h3>Espacios y tamaños</h3>
-<div class="ancho">
+    <h1>Esto es un h1 dentro de un div</h1>
+  </div>
+  <h3>Espacios y tamaños</h3>
+  <div class="ancho">
     <h1>Cambiar anchura</h1>
-</div>
-<div class="alto">
+  </div>
+  <div class="alto">
     <h1>Cambiar altura</h1>
-</div>
-<div class="tarjeta">
+  </div>
+  <div class="tarjeta">
     <h3 class="encabezado">Titulo de la tarjeta</h3>
     <p class="descripcion">Esta es la descripcion de la tarjeta</p>
-</div>
+  </div>
 </html>
