--- a/06-Selectores/html/espicificidad.html
+++ b/06-Selectores/html/espicificidad.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Especificidad</title>
-    <link rel="stylesheet" href="../css/especificidad.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/especificidad.css" />
+  </head>
+  <body>
     <h1>Este es un titulo</h1>
-    <p>Mollit ea sit tempor mollit. Voluptate sit commodo culpa veniam laborum Lorem anim. 
-       Dolor nisi in quis veniam aute dolor officia officia.Eu anim labore aute culpa commodo 
-       ea pariatur sint commodo. Sunt ut culpa enim in mollit quis amet. Ex laborum reprehenderit 
-       dolore tempor enim veniam eiusmod laboris ipsum non et tempor aute.</p>
-</body>
+    <p>
+      Mollit ea sit tempor mollit. Voluptate sit commodo culpa veniam laborum
+      Lorem anim. Dolor nisi in quis veniam aute dolor officia officia.Eu anim
+      labore aute culpa commodo ea pariatur sint commodo. Sunt ut culpa enim in
+      mollit quis amet. Ex laborum reprehenderit dolore tempor enim veniam
+      eiusmod laboris ipsum non et tempor aute.
+    </p>
+  </body>
 </html>
