--- a/05-Disposiciones/posicionamiento.html
+++ b/05-Disposiciones/posicionamiento.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Posicionamiento</title>
-    <link rel="stylesheet" href="css/posicionamiento.css">
-</head>
-<body>
-   <!-- <h1>Posicionamiento</h1>
+    <link rel="stylesheet" href="css/posicionamiento.css" />
+  </head>
+  <body>
+    <!-- <h1>Posicionamiento</h1>
     <li>Static</li>
     <li>Relativo</li>
     <li>Fixed</li>
@@ -19,5 +19,5 @@
     <div class="fixed">soy un div fixed</div>
     <div class="absolute">yo soy un div Absolute</div>
     <div class="sticky">yo soy un div Sticky</div>
-</body>
+  </body>
 </html>
