--- a/02-forms tables/Multimedia.html
+++ b/02-forms tables/Multimedia.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Multimedia con HTML</title>
-    </head>
-    <body>
-        <h3>Imagenes</h3>
-        <img src="Imagenes/logohtml.webp" alt="Logo HTML5" height="300">
-        <img src=" Copiar vinculo de imagen  " alt="logo moto" width="300" height="300">
+  <head>
+    <title>Multimedia con HTML</title>
+  </head>
+  <body>
+    <h3>Imagenes</h3>
+    <img src="Imagenes/logohtml.webp" alt="Logo HTML5" height="300" />
+    <img
+      src=" Copiar vinculo de imagen  "
+      alt="logo moto"
+      width="300"
+      height="300"
+    />
 
-        <h3>Videos</h3>
-        <video width="300" height="300" controls autoplay muted loop>
-        <source src="Intro.mp4" type="video/mp4" />
-        </video>
+    <h3>Videos</h3>
+    <video width="300" height="300" controls autoplay muted loop>
+      <source src="Intro.mp4" type="video/mp4" />
+    </video>
 
-        <h3>Audio</h3>
-        <audio controls autoplay>
-        <source src="gnr-welcome.mp3" type="audio/mp3"/></audio>
-    </body>
+    <h3>Audio</h3>
+    <audio controls autoplay>
+      <source src="gnr-welcome.mp3" type="audio/mp3" />
+    </audio>
+  </body>
 </html>
