--- a/04 Intro CSS/Web con CCS.html
+++ b/04 Intro CSS/Web con CCS.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Trabajando con CSS</title>
-        <link rel="stylesheet" href="estilos.css">
-    </head>
-    <body>
-        <h1>Custom style sheet </h1>
-        <p>
-            Esto es un parrafo
-        </p>
-        <h2 class="encabezado">Esta es la seccion de noticias</h2>
-        <p id="primera noticia">La primera noticia es que ..</p>
-        <p id="segunda noticia">La segunda noticia es que ..</p>
-        <div>
-            <p class="autor">Autor: Gorka Villar</p>
-            <p class="fecha">Fecha: 21/03/2022</p>
-            <p class="ubicacion">Ubicación: Madrid</p>
-        </div>
-    </body>
+  <head>
+    <title>Trabajando con CSS</title>
+    <link rel="stylesheet" href="estilos.css" />
+  </head>
+  <body>
+    <h1>Custom style sheet</h1>
+    <p>Esto es un parrafo</p>
+    <h2 class="encabezado">Esta es la seccion de noticias</h2>
+    <p id="primera noticia">La primera noticia es que ..</p>
+    <p id="segunda noticia">La segunda noticia es que ..</p>
+    <div>
+      <p class="autor">Autor: Gorka Villar</p>
+      <p class="fecha">Fecha: 21/03/2022</p>
+      <p class="ubicacion">Ubicación: Madrid</p>
+    </div>
+  </body>
 </html>
