--- a/05-Disposiciones/video.html
+++ b/05-Disposiciones/video.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Videos</title>
-    <link rel="stylesheet" href="css/video.css">
-</head>
-<body>
-    <video class="video" playsinline autoplay muted loop >
-        <source src="videoplayback.mp4" type="video/mp4" > 
+    <link rel="stylesheet" href="css/video.css" />
+  </head>
+  <body>
+    <video class="video" playsinline autoplay muted loop>
+      <source src="videoplayback.mp4" type="video/mp4" />
     </video>
     <div class="header">
-        <h1>Visita a Bogota</h1>
-        <button>Llamada ala accion</button>
+      <h1>Visita a Bogota</h1>
+      <button>Llamada ala accion</button>
     </div>
-
-</body>
+  </body>
 </html>
