--- a/07-Formularios/html/login.html
+++ b/07-Formularios/html/login.html
@@ -28,11 +28,11 @@
       <form action="">
         <div class="sectioninputs">
           <label for="name">
-            <span>Name</span>
+            <span>Nomb</span>
             <input id="name" name="name" />
           </label>
           <label for="username">
-            <span>Username</span>
+            <span>User name</span>
             <input id="username" name="username" />
           </label>
           <label for="email">
