--- a/12-Bootstrap-elementos/bootstrapini.html
+++ b/12-Bootstrap-elementos/bootstrapini.html
@@ -12,7 +12,9 @@
     />
   </head>
   <body>
-    <div class="conteiner p-4"></div>
+    <div class="conteiner">
+      
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
