--- a/12-Bootstrap-elementos/modales.html
+++ b/12-Bootstrap-elementos/modales.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <div class="conteiner p-4">
+    <div class="container p-4">
       <!-- Button trigger modal -->
       <button
         type="button"
