--- a/12-Bootstrap-elementos/ejercicio.html
+++ b/12-Bootstrap-elementos/ejercicio.html
@@ -19,7 +19,7 @@
           <h1 class="display-5 fw-bold">Ejercicio</h1>
           <p class="col-md-8 fs-5">
             En la primera sección crea un Jumbotron replicando el que realizamos
-            en el vídeo El botón de llamada a la acción debe abrir una ventana
+            en el vídeo, el botón de llamada a la acción debe abrir una ventana
             modal.
           </p>
           <button
@@ -33,18 +33,42 @@
           <div class="modal fade" data-bs-backdrop="static" id="modal-ejemplo">
             <div class="modal-dialog">
               <div class="modal-content">
-                <h2 class="modal-header">prueba</h2>
-                <button
-                  class="btn btn-primary btn btn-outline-secundary"
-                  data-bs-dismiss="modal"
-                >
-                  cerrar
-                </button>
+                <h1 class="modal-header">Ejercicio Jumbotron</h1>
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">
+                    Titulo Del Modal
+                  </h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Cerrar
+                  </button>
+                  <button type="button" class="btn btn-primary">
+                    Guardar Cambios
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div></div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt id est
+        dolores incidunt fugit alias aliquam vero nulla consequatur debitis
+        suscipit explicabo velit exercitationem quibusdam dolorum distinctio,
+        rem magnam! Accusamus.
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
